# python-bad-project

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  README.md  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: DO-NOT-RUN-vulnerable-workflow.yml  ci.yaml  docker-publish.yml
src/bugs/: exception_handling.py  mutable_defaults.py  off_by_one.py  resource_leaks.py
src/code_smells/: naming_issues.py
src/complex_code/: long_methods.py
src/duplications/: duplicate_functions.py  duplicate_logic.py
src/golf/: golf.py
src/vulnerabilities/: command_injection.py  hardcoded_credentials.py  insecure_crypto.py  sql_injection.py
tests/: test_bugs.py  test_vulnerabilities.py
