[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-bad-project"
version = "0.2.0"
description = "A project with intentional vulnerabilities for testing purposes"
readme = "README.md"
requires-python = ">=3.7,<3.8"  # Python 3.7 specifically due to TensorFlow 1.14.0 compatibility
license = {text = "MIT"}
authors = [
    {name = "Project Author", email = "diamantis.sellis@cosmotech.com"}
]

dependencies = [
    # Core dependencies with known vulnerabilities
    "django==2.2.0",  # Multiple CVEs including SQL injection vulnerabilities
    "flask==0.12.3",  # Multiple CVEs including security issues
    "cryptography==2.8",  # Older version with known vulnerabilities
    "requests==2.20.0",  # Several CVEs including security issues
    "pillow==6.2.0",  # Multiple CVEs including memory corruption vulnerabilities
    "pyyaml==5.1",  # Code execution vulnerability
    "jinja2==2.9.6",  # Server-side template injection vulnerability, compatible with Flask 0.12.3
    
    # Database dependencies
    "sqlalchemy==1.3.0",  # SQL injection vulnerabilities
    "pymongo==3.7.0",  # Older version with security issues
    
    # Web framework dependencies
    "werkzeug==0.14.1",  # Security issues, compatible with Flask 0.12.3
    "tornado==5.0.2",  # Security vulnerabilities
    
    # Utility dependencies
    "urllib3==1.24.2",  # HTTPS certificate validation issues
    "paramiko==2.4.2",  # Authentication bypass vulnerability
    
    # Dependencies with various licenses for license compliance testing
    "matplotlib==3.0.3",  # GPL-compatible license
    "chardet==3.0.4",  # LGPL license
    "numpy==1.16.6",  # MIT license, compatible with TensorFlow 1.14.0
    "pandas==0.25.3",  # BSD license
    "tensorflow==1.14.0",  # Apache 2.0 license, only compatible with Python 3.7 and below
]

[project.optional-dependencies]
dev = [
    # Development dependencies
    "pytest==4.6.11",  # Older version
    "pylint==2.3.1",  # Older version
]

[tool.setuptools]
packages = ["src"]

[tool.pytest]
testpaths = ["tests"]

[tool.pylint]
max-line-length = 100
disable = ["C0111", "C0103"]